# launcher

./: package-lock.json  package.json
.github/workflows/: build.yaml  check.yaml
src/: types.ts
src-tauri/: Cargo.toml  build.rs  library-patches.json  post.json  tauri.conf.json
src-tauri/capabilities/: default.json  splash.json
src-tauri/src/: extension_state.rs  main.rs  open_url.rs  state.rs  util.rs
src-tauri/src/extensions/: mod.rs  types.rs
src-tauri/src/launch/: client.rs  java.rs  lib_patch.rs  logs.rs  minecraft.rs  mod.rs  process.rs
src-tauri/src/mods/: mod.rs
src-tauri/src/oauth/: mod.rs  server.rs
src-tauri/src/persist/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/task/: channel_progress.rs  copy.rs  download.rs  mod.rs
src-tauri/src/util/: mod.rs  rand.rs
src/components/: bg_gradient.module.scss  bg_gradient.tsx  extension_card.tsx  extensions_page.tsx  extensions_search.tsx  installed.tsx  launch_layout.module.css  launch_layout.tsx  market.tsx  mods_page.tsx  nav.module.scss  nav.tsx  news_page.tsx  skeleton_extension_card.tsx
src/components/extension/: extension_card.tsx  extensions_search.tsx
src/components/mod/: mod_card.tsx  mods_search.tsx
src/components/settings/: settings.ts  settings_popup.module.sass  (+1 more)
src/pages/: _app.tsx  authentication.module.sass  authentication.tsx  console.module.sass  console.tsx  globals.scss  home.tsx  index.module.css  index.module.sass  index.tsx  launch_layout.module.css  launch_layout.tsx  login.module.sass  login.tsx  splashscreen.module.sass  splashscreen.tsx  theme.sass
