[package]
name = "app"
version = "1.0.19"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
zip = "2.2.0"
walkdir = "2.5.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.1", features = [] }
open = "5.3.0"
urlencoding = "2.1.3"
log = "0.4.22"
httparse = "1.9.4"
url = { version = "2.5.2", features = [] }
reqwest = {version = "0.12.7", features = ["blocking", "json"] }
tokio = "1.40.0"
serde_urlencoded = "0.7.1"
home = "0.5.5"
zip-extract = "0.2.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
